fix(rutva-deb): resolve sass compilation and visual alignment issues
- Standardize Sass variables to match _base.sass underscores

- Recompile styles.css with fixed rutva-deb styles

- Sync main specs with visual parity requirements

- Archive OpenSpec fix change

--- a/css/_rutva-deb-airport-transfers.sass
+++ b/css/_rutva-deb-airport-transfers.sass
@@ -74,7 +74,7 @@ main.rutva-deb
 
             &:focus:not(:disabled), &:hover:not(:disabled)
                 outline: none
-                box-shadow: 0px 0px 8px 0px $color-dark
+                box-shadow: 0px 0px 8px 0px $color_d
 
 
     color: $color-black
